// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Cell /> renders correctly 1`] = `
<div
  className="iUrSsH"
/>
`;

exports[`<Cell /> renders correctly with gutter 1`] = `
<div
  className="hTELSA"
/>
`;

exports[`<Cell /> renders correctly with lg 1`] = `
<div
  className="iUrSsH"
/>
`;

exports[`<Cell /> renders correctly with md 1`] = `
<div
  className="iUrSsH"
/>
`;

exports[`<Cell /> renders correctly with sm 1`] = `
<div
  className="iUrSsH"
/>
`;
